Refactored AssessmentReportGenerator. Fixed some bugs. Added necessary methods for fetching generated reports. Added tests.